#76 Fixed carousel item overlapping issue in homepage mobile view

--- a/core/static/css/v2/pages/home/home-page.less
+++ b/core/static/css/v2/pages/home/home-page.less
@@ -630,7 +630,7 @@
             }
         }
         h1, .featured-content-title {
-          padding: 15px 0;
+          padding: 8px 0 1px 0;
         }
        &.item-container {
          margin: 0 auto;
